fix: make layout more fixed and move nav to top on mobile

--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -1,6 +1,6 @@
 body {
     font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     color: black;
     text-rendering: optimizeLegibility;
     padding: 2rem;
